[gd_scene load_steps=21 format=3 uid="uid://btwqpb5a5n2h2"]

[ext_resource type="Script" path="res://studio/ui/fold.gd" id="1"]
[ext_resource type="Script" path="res://studio/mixer/channel_strip.gd" id="2"]
[ext_resource type="Texture2D" uid="uid://bser0n7dgdg6c" path="res://addons/nsound/assets/icons/godot/AudioBusSolo.svg" id="3"]
[ext_resource type="Texture2D" uid="uid://bjjupcv4j7tte" path="res://addons/nsound/assets/icons/godot/Play.svg" id="4"]
[ext_resource type="Texture2D" uid="uid://hbkt6o2us78r" path="res://addons/nsound/assets/icons/godot/AudioBusBypass.svg" id="5"]
[ext_resource type="Texture2D" uid="uid://c8hm55hmibnp7" path="res://addons/nsound/assets/icons/godot/AudioBusMute.svg" id="6"]
[ext_resource type="Texture2D" uid="uid://bheop36yudvnh" path="res://addons/nsound/assets/icons/godot/BusVuFull.svg" id="7"]
[ext_resource type="Texture2D" uid="uid://lyets6dg00ei" path="res://addons/nsound/assets/icons/godot/Pause.svg" id="8"]
[ext_resource type="Texture2D" uid="uid://dj2eotvtxkgse" path="res://addons/nsound/assets/icons/godot/BusVuEmpty.svg" id="9"]

[sub_resource type="Theme" id="9"]

[sub_resource type="StyleBoxEmpty" id="13"]

[sub_resource type="StyleBoxEmpty" id="10"]

[sub_resource type="StyleBoxFlat" id="11"]

[sub_resource type="StyleBoxEmpty" id="12"]

[sub_resource type="StyleBoxEmpty" id="8"]

[sub_resource type="StyleBoxEmpty" id="5"]

[sub_resource type="StyleBoxFlat" id="14"]

[sub_resource type="StyleBoxEmpty" id="7"]

[sub_resource type="StyleBoxFlat" id="15"]

[sub_resource type="CompressedTexture2D" id="16"]

[node name="Strip" type="PanelContainer"]
offset_right = 72.0
offset_bottom = 401.0
script = ExtResource("2")

[node name="PreviewTimer" type="Timer" parent="."]

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="BusName" type="Label" parent="HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Master"

[node name="AudioServerBusName" type="LineEdit" parent="HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Master"
editable = false

[node name="Controls" type="HBoxContainer" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Solo" type="Button" parent="HBoxContainer/VBoxContainer/Controls"]
visible = false
layout_mode = 2
focus_mode = 0
theme = SubResource("9")
theme_override_styles/normal = SubResource("13")
theme_override_styles/hover = SubResource("10")
theme_override_styles/pressed = SubResource("11")
theme_override_styles/focus = SubResource("12")
toggle_mode = true
icon = ExtResource("3")

[node name="Mute" type="Button" parent="HBoxContainer/VBoxContainer/Controls"]
layout_mode = 2
focus_mode = 0
theme_override_styles/normal = SubResource("8")
theme_override_styles/hover = SubResource("5")
theme_override_styles/pressed = SubResource("14")
theme_override_styles/focus = SubResource("7")
toggle_mode = true
icon = ExtResource("6")

[node name="Bypass" type="Button" parent="HBoxContainer/VBoxContainer/Controls"]
layout_mode = 2
focus_mode = 0
theme_override_styles/normal = SubResource("8")
theme_override_styles/hover = SubResource("5")
theme_override_styles/pressed = SubResource("15")
theme_override_styles/focus = SubResource("7")
toggle_mode = true
icon = ExtResource("5")

[node name="HSeparator" type="HSeparator" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="SpinBox" type="SpinBox" parent="HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_icons/updown = SubResource("16")
min_value = -80.0
step = 0.1

[node name="Fader" type="HBoxContainer" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 1

[node name="AutoVolumeSlider" type="VSlider" parent="HBoxContainer/VBoxContainer/Fader"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 128)
layout_mode = 2
max_value = 1.0
step = 0.001
value = 0.729
editable = false

[node name="UserVolumeSlider" type="VSlider" parent="HBoxContainer/VBoxContainer/Fader"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 128)
layout_mode = 2
max_value = 1.0
step = 0.001
value = 0.729

[node name="AudioValuePreviewBox" type="Panel" parent="HBoxContainer/VBoxContainer/Fader/UserVolumeSlider"]
visible = false
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="AudioPreviewHbc" type="HBoxContainer" parent="HBoxContainer/VBoxContainer/Fader/UserVolumeSlider/AudioValuePreviewBox"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="AudioValuePreviewLabel" type="Label" parent="HBoxContainer/VBoxContainer/Fader/UserVolumeSlider/AudioValuePreviewBox/AudioPreviewHbc"]
layout_mode = 2

[node name="VuMeter" type="HBoxContainer" parent="HBoxContainer/VBoxContainer/Fader"]
unique_name_in_owner = true
layout_mode = 2

[node name="VuL" type="TextureProgressBar" parent="HBoxContainer/VBoxContainer/Fader/VuMeter"]
unique_name_in_owner = true
layout_mode = 2
min_value = -80.0
max_value = 24.0
step = 0.1
fill_mode = 3
texture_under = ExtResource("9")
texture_progress = ExtResource("7")

[node name="VuR" type="TextureProgressBar" parent="HBoxContainer/VBoxContainer/Fader/VuMeter"]
unique_name_in_owner = true
layout_mode = 2
min_value = -80.0
max_value = 24.0
step = 0.1
fill_mode = 3
texture_under = ExtResource("9")
texture_progress = ExtResource("7")

[node name="Progress" type="VBoxContainer" parent="HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="Icons" type="HBoxContainer" parent="HBoxContainer/VBoxContainer/Progress"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Play" type="TextureRect" parent="HBoxContainer/VBoxContainer/Progress/Icons"]
visible = false
layout_mode = 2
texture = ExtResource("4")

[node name="Pause" type="TextureRect" parent="HBoxContainer/VBoxContainer/Progress/Icons"]
layout_mode = 2
texture = ExtResource("8")

[node name="ProgressBar" type="ProgressBar" parent="HBoxContainer/VBoxContainer/Progress/Icons"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 16)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 5
max_value = 1.0

[node name="Hb" type="HBoxContainer" parent="HBoxContainer/VBoxContainer/Progress"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Time" type="Label" parent="HBoxContainer/VBoxContainer/Progress/Hb"]
unique_name_in_owner = true
layout_mode = 2
text = "0.0"

[node name="Separator" type="Label" parent="HBoxContainer/VBoxContainer/Progress/Hb"]
layout_mode = 2
text = "/"

[node name="TotalTime" type="Label" parent="HBoxContainer/VBoxContainer/Progress/Hb"]
unique_name_in_owner = true
layout_mode = 2
text = "9.0s"

[node name="Effects" type="Tree" parent="HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
focus_mode = 1
allow_reselect = true
allow_rmb_select = true
hide_folding = true
hide_root = true

[node name="OptionButton" type="OptionButton" parent="HBoxContainer/VBoxContainer"]
visible = false
layout_mode = 2

[node name="ShowFold" type="Button" parent="HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
text = "subtracks"

[node name="SendName" type="LineEdit" parent="HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Master"
editable = false

[node name="FoldingContent" type="MarginContainer" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
script = ExtResource("1")

[node name="Panel" type="Panel" parent="HBoxContainer/FoldingContent"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/FoldingContent"]
layout_mode = 2

[node name="Content" type="MarginContainer" parent="HBoxContainer/FoldingContent/VBoxContainer"]
visible = false
layout_mode = 2

[node name="Substrips" type="HBoxContainer" parent="HBoxContainer/FoldingContent/VBoxContainer/Content"]
unique_name_in_owner = true
layout_mode = 2

[connection signal="toggled" from="HBoxContainer/VBoxContainer/Controls/Solo" to="." method="_on_Solo_toggled"]
[connection signal="toggled" from="HBoxContainer/VBoxContainer/Controls/Mute" to="." method="_on_Mute_toggled"]
[connection signal="toggled" from="HBoxContainer/VBoxContainer/Controls/Bypass" to="." method="_on_Bypass_toggled"]
[connection signal="drag_ended" from="HBoxContainer/VBoxContainer/Fader/AutoVolumeSlider" to="." method="_on_AutoVolumeSlider_drag_ended"]
[connection signal="value_changed" from="HBoxContainer/VBoxContainer/Fader/AutoVolumeSlider" to="." method="_on_AutoVolumeSlider_value_changed"]
[connection signal="drag_ended" from="HBoxContainer/VBoxContainer/Fader/UserVolumeSlider" to="." method="_on_UserVolumeSlider_drag_ended"]
[connection signal="value_changed" from="HBoxContainer/VBoxContainer/Fader/UserVolumeSlider" to="." method="_on_UserVolumeSlider_value_changed"]
